TFP-7063 samle logging og bruk standardiserte logg-felt-navn