@@ -1,6 +1,6 @@
 package no.nav.folketrygdloven.kalkulus.domene.rest;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 
@@ -16,16 +16,6 @@ import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
-import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelBeregnRequestDto;
-import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelFpkalkulusRequestDto;
-import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelHåndterBeregningRequestDto;
-import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelKopierBeregningsgrunnlagRequestDto;
-import no.nav.foreldrepenger.kalkulus.kontrakt.request.KopierFastsattGrunnlagRequest;
-import no.nav.foreldrepenger.kalkulus.kontrakt.response.KalkulusRespons;
-import no.nav.foreldrepenger.kalkulus.kontrakt.response.TilstandResponse;
-
-import org.slf4j.MDC;
-
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -37,9 +27,17 @@ import no.nav.folketrygdloven.kalkulus.domene.entiteter.del_entiteter.KoblingRef
 import no.nav.folketrygdloven.kalkulus.domene.entiteter.del_entiteter.Saksnummer;
 import no.nav.folketrygdloven.kalkulus.domene.entiteter.kobling.KoblingEntitet;
 import no.nav.folketrygdloven.kalkulus.domene.kobling.KoblingTjeneste;
-import no.nav.folketrygdloven.kalkulus.kodeverk.FagsakYtelseType;
 import no.nav.folketrygdloven.kalkulus.domene.kopiering.KopierBeregningsgrunnlagTjeneste;
 import no.nav.folketrygdloven.kalkulus.domene.tjeneste.beregningsgrunnlag.RullTilbakeTjeneste;
+import no.nav.folketrygdloven.kalkulus.kodeverk.FagsakYtelseType;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelBeregnRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelFpkalkulusRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelHåndterBeregningRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelKopierBeregningsgrunnlagRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.KopierFastsattGrunnlagRequest;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.HåndterBeregningDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.response.KalkulusRespons;
+import no.nav.foreldrepenger.kalkulus.kontrakt.response.TilstandResponse;
 import no.nav.vedtak.exception.TekniskException;
 import no.nav.vedtak.sikkerhet.abac.AbacDataAttributter;
 import no.nav.vedtak.sikkerhet.abac.BeskyttetRessurs;
@@ -54,8 +52,6 @@ import no.nav.vedtak.sikkerhet.abac.beskyttet.ResourceType;
 @ApplicationScoped
 @Transactional
 public class OperereKalkulusRestTjeneste {
-    private static final String PROSESS_SAKSNUMMER = "prosess_saksnummer";
-    private static final String PROSESS_KOBLING_REF = "prosess_koblingreferanse";
 
     private KoblingTjeneste koblingTjeneste;
     private RullTilbakeTjeneste rullTilbakeTjeneste;
@@ -86,7 +82,6 @@ public class OperereKalkulusRestTjeneste {
     public Response beregn(@TilpassetAbacAttributt(supplierClass = BeregnRequestAbacSupplier.class) @NotNull @Valid EnkelBeregnRequestDto request) {
         validerYtelse(request.ytelseSomSkalBeregnes());
         var saksnummer = new Saksnummer(request.saksnummer().verdi());
-        MDC.put(PROSESS_SAKSNUMMER, saksnummer.getVerdi());
         Optional<KoblingReferanse> originalKoblingRef =
             request.originalBehandlingUuid() == null ? Optional.empty() : Optional.of(new KoblingReferanse(request.originalBehandlingUuid()));
         var kobling = koblingTjeneste.finnEllerOpprett(new KoblingReferanse(request.behandlingUuid()),
@@ -102,7 +97,6 @@ public class OperereKalkulusRestTjeneste {
     @Operation(description = "Kopierer beregning fra eksisterende referanse til ny referanse for å kunne fortsette beregningen fra angitt steg.", tags = "beregn", summary = ("Kopierer en beregning."))
     @BeskyttetRessurs(actionType = ActionType.UPDATE, resourceType = ResourceType.FAGSAK, sporingslogg = true)
     public Response kopierBeregning(@TilpassetAbacAttributt(supplierClass = KopierBeregningsgrunnlagRequestAbacSupplier.class) @NotNull @Valid EnkelKopierBeregningsgrunnlagRequestDto request) {
-        MDC.put(PROSESS_SAKSNUMMER, request.saksnummer().verdi());
         kopierTjeneste.kopierBeregningsgrunlagForStartISteg(new KoblingReferanse(request.behandlingUuid()),
             new KoblingReferanse(request.originalBehandlingUuid()), new Saksnummer(request.saksnummer().verdi()), request.steg(), request.kalkulatorInput());
         return Response.ok().build();
@@ -114,7 +108,6 @@ public class OperereKalkulusRestTjeneste {
     @Operation(description = "Kopierer fastsatt beregningsgrunnlag fra eksisterende referanse til ny referanse. Forutsetter at originalBehandlingUuid har et fastsatt grunnlag og at koblingen er avsluttet.", tags = "beregn", summary = ("Kopierer en fastsatt beregning."))
     @BeskyttetRessurs(actionType = ActionType.UPDATE, resourceType = ResourceType.FAGSAK, sporingslogg = true)
     public Response kopierFastsattBeregning(@TilpassetAbacAttributt(supplierClass = KopierFastsattGrunnlagRequestAbacSupplier.class) @NotNull @Valid KopierFastsattGrunnlagRequest request) {
-        MDC.put(PROSESS_SAKSNUMMER, request.saksnummer().verdi());
         kopierTjeneste.kopierFastsattBeregningsgrunnlag(new KoblingReferanse(request.behandlingUuid()),
             new KoblingReferanse(request.originalBehandlingUuid()),
             new Saksnummer(request.saksnummer().verdi()));
@@ -131,9 +124,8 @@ public class OperereKalkulusRestTjeneste {
         var kobling = koblingTjeneste.hentKoblingOptional(new KoblingReferanse(request.behandlingUuid()))
             .orElseThrow(() -> new IllegalStateException(
                 "Kan ikke løse avklaringsbehov i beregning uten en eksisterende kobling. Gjelder behandlingUuid " + request.behandlingUuid()));
-        MDC.put(PROSESS_SAKSNUMMER, kobling.getSaksnummer().getVerdi());
         validerIkkeAvsluttet(kobling);
-        var liste = request.håndterBeregningDto() != null ? Collections.singletonList(request.håndterBeregningDto()) : request.håndterBeregningDtoList();
+        List<HåndterBeregningDto> liste = request.håndterBeregningDto() != null ? List.of(request.håndterBeregningDto()) : List.of();
         var respons = orkestrerer.håndter(kobling, request.kalkulatorInput(), liste);
         return Response.ok(respons).build();
     }
@@ -146,9 +138,7 @@ public class OperereKalkulusRestTjeneste {
     @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     public Response deaktiverBeregningsgrunnlag(@TilpassetAbacAttributt(supplierClass = EnkelFpkalkulusRequestAbacSupplier.class) @NotNull @Valid EnkelFpkalkulusRequestDto request) {
         var saksnummer = new Saksnummer(request.saksnummer().verdi());
-        MDC.put(PROSESS_SAKSNUMMER, saksnummer.getVerdi());
         var koblingReferanse = new KoblingReferanse(request.behandlingUuid());
-        MDC.put(PROSESS_KOBLING_REF, koblingReferanse.getReferanse().toString());
         var kopt = koblingTjeneste.hentKoblingOptional(koblingReferanse)
             .orElseThrow(() -> new TekniskException("FT-47197",
                 String.format("Pøver å deaktivere data på en kobling som ikke finnes, koblingRef %s", koblingReferanse)));
@@ -166,9 +156,7 @@ public class OperereKalkulusRestTjeneste {
     @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     public Response avslutt(@TilpassetAbacAttributt(supplierClass = EnkelFpkalkulusRequestAbacSupplier.class) @NotNull @Valid EnkelFpkalkulusRequestDto request) {
         var saksnummer = new Saksnummer(request.saksnummer().verdi());
-        MDC.put(PROSESS_SAKSNUMMER, saksnummer.getVerdi());
         var koblingReferanse = new KoblingReferanse(request.behandlingUuid());
-        MDC.put(PROSESS_KOBLING_REF, koblingReferanse.getReferanse().toString());
         var kopt = koblingTjeneste.hentKoblingOptional(koblingReferanse)
             .orElseThrow(() -> new TekniskException("FT-47197",
                 String.format("Prøver å markere en kobling som ikke finnes som avsluttet, koblingRef %s", koblingReferanse)));
